tests/vertical-slice/reject/unknown_named_tuple_type.hew
// Reject: a tuple that contains a named user type that is declared nowhere.
// F1 reports the undefined element type at the resolution site with `unknown
// type `Foo``, ahead of the D10 MIR-boundary `UnknownType` fail-closed (which
// remains as defense-in-depth). It must not panic.
fn f(x: (Foo, i64)) -> (Foo, i64) {
    return x;
}
